--- a/garden-shop/dev/style/css/reset.css
+++ b/garden-shop/dev/style/css/reset.css
@@ -88,7 +88,6 @@ h6 {
 img {
     vertical-align: top;
     user-select: none;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    height: auto;
 }
